Fixed hamburger navbar toggler and collapse

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -216,6 +216,12 @@ header {
   .navbar {
     @extend .py-4;
     @include transition($transition-base);
+
+    //https://stackoverflow.com/a/43936913/3929620
+    .navbar-collapse {
+      //@include transition($transition-base);
+      @include transition(height 300ms ease-in-out);
+    }
   }
 
   &.scroll {
@@ -224,6 +230,127 @@ header {
 
     .navbar {
       @extend .py-2;
+    }
+  }
+}
+
+
+/*---------------------------------------------------*/
+/*	hamburger
+/*---------------------------------------------------*/
+
+.hamburger {
+  padding: 15px 15px;
+  //display: inline-block;
+  cursor: pointer;
+  transition-property: opacity, filter;
+  transition-duration: 0.15s;
+  transition-timing-function: linear;
+  font: inherit;
+  color: inherit;
+  text-transform: none;
+  background-color: transparent;
+  border: 0;
+  margin: 0;
+  overflow: visible;
+
+  padding: 0px;
+  height: 100%;
+  display: table-cell;
+  vertical-align: middle;
+
+  @include hover-focus-active() {
+    outline: none;
+  }
+
+  .hamburger-box {
+    width: 30px;
+    height: 18px;
+    //display: inline-block;
+    position: relative;
+
+    display: block;
+
+    .hamburger-inner {
+      display: block;
+      top: 50%;
+      margin-top: -2px;
+
+      &,
+      &::before,
+      &::after {
+        width: 30px;
+        height: 2px;
+        background-color: #333333;
+        position: absolute;
+        transition-property: transform;
+        transition-duration: 0.15s;
+        transition-timing-function: ease;
+
+        -webkit-border-radius: 4px;
+        -moz-border-radius: 4px;
+        border-radius: 4px;
+
+        background-color: #fff;
+        width: 30px;
+
+        transition: all .3s ease;
+      }
+
+      &::before,
+      &::after {
+        content: '';
+        display: block;
+      }
+
+      &::before {
+        top: -8px;
+      }
+
+      &::after {
+        bottom: -10px;
+      }
+    }
+  }
+
+  &.hamburger--collapse-r {
+
+    .hamburger-inner {
+      top: auto;
+      bottom: 0;
+      transition-duration: 0.13s;
+      transition-delay: 0.13s;
+      transition-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+
+      &::after {
+        top: -16px;
+        transition: top 0.2s 0.2s cubic-bezier(0.33333, 0.66667, 0.66667, 1), opacity 0.1s linear;
+      }
+
+      &::before {
+        transition: top 0.12s 0.2s cubic-bezier(0.33333, 0.66667, 0.66667, 1), transform 0.13s cubic-bezier(0.55, 0.055, 0.675, 0.19);
+      }
+    }
+
+    &.is-active {
+
+      .hamburger-inner {
+        transform: translate3d(0, -10px, 0) rotate(45deg);
+        transition-delay: 0.22s;
+        transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+
+        &::after {
+          top: 0;
+          opacity: 0;
+          transition: top 0.2s cubic-bezier(0.33333, 0, 0.66667, 0.33333), opacity 0.1s 0.22s linear;
+        }
+
+        &::before {
+          top: 0;
+          transform: rotate(90deg);
+          transition: top 0.1s 0.16s cubic-bezier(0.33333, 0, 0.66667, 0.33333), transform 0.13s 0.25s cubic-bezier(0.215, 0.61, 0.355, 1);
+        }
+      }
     }
   }
 }
@@ -274,7 +401,8 @@ header {
   margin-left: -28px;
   transform: rotate(-90deg);
 
-  i {
+  i,
+  svg {
     animation: upDown 1s linear 0s infinite;
   }
 }
@@ -287,7 +415,8 @@ header {
   bottom: map-get($spacers, 5);
   transform: rotate(-270deg);
 
-  i {
+  i,
+  svg {
     animation: upDown 1s linear 0s infinite;
   }
 }
